--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -7,8 +7,8 @@
     
     <ImageView
         android:layout_width="200dp"
-        android:layout_height="150dp"
+        android:layout_height="200dp"
         android:layout_marginTop="24dp"
-        android:src="@mipmap/icon"/>
+        android:src="@mipmap/logo_white"/>
 
 </LinearLayout>
