--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/blue"
+    android:weightSum="3"
+    android:background="@color/forgif"
     android:gravity="center">
     
-    <ImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginTop="24dp"
-        android:src="@mipmap/logo_white"/>
+    <pl.droidsonroids.gif.GifImageView
+       android:layout_height="0dp"
+        android:layout_weight="3"
+        android:layout_width="match_parent"
+       android:src="@raw/splash"
+       app:loopCount="1"
+    />
 
 </LinearLayout>
