--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="blue">#357feb</color>
-    <color name="primary_dark">#357feb</color>
+    <color name="blue">#327FEB</color>
+    <color name="forgif">#377ce1</color>
+    <color name="primary_dark">#327FEB</color>
 </resources>
